Add sendQuittingPacket & leaveWorld methods to IWorld